minor changes-linking

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
                     </ul>
                 </div>
                 <div class="user_profile">
-                    <a href="#"><button>Login</button></a>
+                    <a href="login.html"><button>Login</button></a>
                 </div>
             </div>
         </div>
