Added Some Comments as instructed in the class and made it responsive

--- a/main.html
+++ b/main.html
@@ -10,13 +10,17 @@
     <title>Hello Users</title>
 </head>
 <body>
+    <!-- Making the webpage in the grids so the navigation bar can be separated-->
     <div class="container">
+        <!-- Navbar starts here -->
         <div class="first">
+            <!-- Background image -->
             <div class="bgimg"></div>
             <div class="navbar">
                 <div class="logo">
                     <h1>MedMingle</h1>
                 </div>
+                <!-- Navbar Options to click -->
                 <div class="options">
                     <ul class="nav_links">
                         <li><a href="#">Home</a></li>
@@ -29,10 +33,12 @@
                 </div>
             </div>
         </div>
+        <!-- Navbar ends here -->
+        <!-- Content Part Starts here -->
         <div class="second">
             <p class="second1">Welcome to MedMingle!!</p>
-            <!-- <p class="second2">Are you looking to elevate your learning experience, boost your grades, and make studying more engaging? Look no further! StudyBud is your gateway to the world of group studying.</p> -->
         </div>
+        <!-- Content Part Ends Here -->
     </div>
     
 </body>
