--- a/login.html
+++ b/login.html
@@ -7,10 +7,14 @@
     <title>Please Login</title>
 </head>
 <body>
+    <!--  This is like the login page box where all the entries are   -->
     <div class="container">
+        <!-- This the Background Image div for the page -->
         <div class="bgimg"></div>
+        <!-- This is the Entries Box -->
         <div class="center">
             <h1>Login</h1>
+            <!-- The Login Form starts from here -->
             <form method="post">
               <div class="txt_field">
                 <input type="text" id="username" required>
@@ -24,6 +28,7 @@
               </div>
               <div class="pass">Forgot Password?</div>
               <input type="submit" value="Login">
+              <!-- Signup Link if not already an user -->
               <div class="signup_link">
                 Not a member? <a href="#">Signup</a>
               </div>
