--- a/signup_temp/signup.html
+++ b/signup_temp/signup.html
@@ -41,7 +41,7 @@
           <span></span>
           <label>Confirm Password</label>
         </div>
-        <div class="pass">Forgot Password?</div>
+        <!-- <div class="pass">Forgot Password?</div> -->
         <input type="submit" value="Sign Up">
         <div class="signup_link">
           Already a member? <a href="#">Login</a>
