changes for report and made aboutus page

--- a/signup_temp/signup.html
+++ b/signup_temp/signup.html
@@ -13,7 +13,7 @@
   <body>
     <div class="bgimg"></div>
     <div class="center">
-      <img src="/sem_4/static/img/icon1.png" alt="ixon">
+      <img src="icon1.png" alt="ixon">
       <h1>Sign Up</h1>
       <form method="post" action="register.php">
         <div class="txt_field">
