--- a/timeline.html
+++ b/timeline.html
@@ -40,7 +40,9 @@
     </header>
 
         <div class="container2">
-        <div class="canvas"><canvas id="myCanvas" width="400" height="100">Canvas unable to load</canvas></div>
+        <div class="canvas"><canvas id="myCanvas" width="400" height="100">Canvas unable to load</canvas>
+        </div>
+
         <table>
             <thead>
                 <tr>
@@ -112,6 +114,7 @@
             </tbody>
         </table>
         </div>
+        
         <script>
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
