--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
               <input type="submit" value="Login">
               <!-- Signup Link if not already an user -->
               <div class="signup_link">
-                Not a member? <a href="#">Signup</a>
+                Not a member? <a href="signup_temp/signup.html">Signup</a>
               </div>
             </form>
           </div>
