added members photos and contact

--- a/aboutus.html
+++ b/aboutus.html
@@ -97,13 +97,13 @@
 <div class="row">
     <div class="column">
         <div class="card">
-            <img src="#">
+            <img src="static\img\anuja.jpeg">
             <div class="container">
                 <h2>Anuja More</h2>
                 <p class="title">Team Leader</p>
                 <p>Computer Engineering (PCE) <br>  
                 amore22comp@student.mes.ac.in</p>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/anujamore06?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                     <p><button class="button" >Contact</button></p>
                 </a>
 
@@ -134,7 +134,7 @@
                 <p class="title">Team Member</p>
                 <p>Computer Engineering (PCE) <br>  
                 omondkar22comp@student.mes.ac.in</p>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/omkar-mondkar-83aa86255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                     <p><button class="button" >Contact</button></p>
                 </a>
             </div>
@@ -149,7 +149,7 @@
                 <p class="title">Team Member</p>
                 <p>Computer Engineering (PCE) <br>  
                 amorajkar22comp@student.mes.ac.in</p>
-                <a href="#" target="_blank">
+                <a href="https://www.instagram.com/atharvmorajkar?igsh=ejJtbW90dmtvbHN0" target="_blank">
                     <p><button class="button" >Contact</button></p>
                 </a>
             </div>
