--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
               <div class="txt_field">
                 <input type="text" id="username" required>
                 <span></span>
-                <label>Name</label>
+                <label>Username</label>
               </div>
               <div class="txt_field">
                 <input type="password" id="password" required>
